--- a/presentations/introduccion-git-github/css/theme/source/blood.scss
+++ b/presentations/introduccion-git-github/css/theme/source/blood.scss
@@ -94,3 +94,10 @@ section.has-light-background {
 // section[data-state="primera"] #codingacademy img {
 //     display: none;
 // }
+
+.nota {
+    background-color: lightyellow;
+    border: 1px solid black;
+    margin: 10px;
+    padding: 10px;
+}
